--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>comprehensive-logging</description>
     <properties>
         <java.version>21</java.version>
+        <springdoc.version>2.5.0</springdoc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -36,6 +37,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
