--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,3 +14,19 @@ services:
       - postgres
     ports:
       - '8080: 8080'
+
+  setup:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.1
+    environment:
+      - ELASTIC_PASSWORD=password
+      - KIBANA_PASSWORD=password
+    container_name: elk-setup
+    command:
+      - bash
+      - -c
+      - |
+        echo "Waiting for Elasticsearch availability";
+        until curl -s http://elasticsearch:9200 | grep -q "missing authentication credentials"; do sleep 30; done;
+        echo "Setting kibana_system password";
+        until curl -s -X POST -u "elastic:${ELASTIC_PASSWORD}" -H "Content-Type: application/json" http://elasticsearch:9200/_security/user/kibana_system/_password -d "{\"password\":\"${KIBANA_PASSWORD}\"}" | grep -q "^{}"; do sleep 10; done;
+        echo "All done!";
